more spacing ux fixes

--- a/static/scss/answers/overlay/base.scss
+++ b/static/scss/answers/overlay/base.scss
@@ -25,6 +25,7 @@
 
   .Answers-overlaySuggestions {
     margin: var(--yxt-base-spacing);
+    margin-top: calc(var(--yxt-base-spacing) / 2);
 
     .hidden {
       display: none;
